--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -634,87 +634,10 @@
           <property name="bottomMargin">
            <number>0</number>
           </property>
-          <item row="0" column="0">
+          <item row="1" column="0">
            <layout class="QGridLayout" name="gridLayout">
-            <item row="0" column="0">
-             <layout class="QHBoxLayout" name="layoutMetadataAoi" stretch="2,0,0,1,0">
-              <item>
-               <layout class="QFormLayout" name="formLayout">
-                <item row="0" column="0">
-                 <widget class="QLabel" name="labelMaxarAoi">
-                  <property name="text">
-                   <string>Area:</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="0" column="1">
-                 <widget class="QgsMapLayerComboBox" name="maxarAoiCombo">
-                  <property name="showCrs">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item>
-               <widget class="QCheckBox" name="metadataUseCanvasExtent">
-                <property name="text">
-                 <string>Use canvas extent</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLabel" name="labelMinIntersection">
-                <property name="text">
-                 <string>Min intersection:</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QSlider" name="minIntersection">
-                <property name="minimum">
-                 <number>1</number>
-                </property>
-                <property name="maximum">
-                 <number>100</number>
-                </property>
-                <property name="value">
-                 <number>50</number>
-                </property>
-                <property name="tracking">
-                 <bool>false</bool>
-                </property>
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="tickPosition">
-                 <enum>QSlider::TicksBelow</enum>
-                </property>
-                <property name="tickInterval">
-                 <number>5</number>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QSpinBox" name="minIntersectionSpinBox">
-                <property name="suffix">
-                 <string>%</string>
-                </property>
-                <property name="minimum">
-                 <number>1</number>
-                </property>
-                <property name="maximum">
-                 <number>100</number>
-                </property>
-                <property name="value">
-                 <number>50</number>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
             <item row="1" column="0">
-             <layout class="QHBoxLayout" name="layoutDatetime" stretch="0,0,0,0,0,2,0">
+             <layout class="QHBoxLayout" name="layoutDatetime" stretch="0,0,1,0,0">
               <item>
                <widget class="QLabel" name="labelFrom">
                 <property name="text">
@@ -750,6 +673,13 @@
                   <month>12</month>
                   <day>21</day>
                  </date>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPushButton" name="getMetadata">
+                <property name="text">
+                 <string>Search imagery</string>
                 </property>
                </widget>
               </item>
@@ -791,51 +721,32 @@
                 </property>
                </widget>
               </item>
+             </layout>
+            </item>
+            <item row="0" column="0">
+             <layout class="QHBoxLayout" name="layoutMetadataAoi" stretch="2,0">
               <item>
-               <widget class="QLabel" name="labelMaxCloudCover">
+               <layout class="QFormLayout" name="formLayout">
+                <item row="0" column="0">
+                 <widget class="QLabel" name="labelMaxarAoi">
+                  <property name="text">
+                   <string>Area:</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="1">
+                 <widget class="QgsMapLayerComboBox" name="maxarAoiCombo">
+                  <property name="showCrs">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="metadataUseCanvasExtent">
                 <property name="text">
-                 <string>Cloud cover up to:</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QSlider" name="maxCloudCover">
-                <property name="minimum">
-                 <number>1</number>
-                </property>
-                <property name="maximum">
-                 <number>100</number>
-                </property>
-                <property name="value">
-                 <number>30</number>
-                </property>
-                <property name="tracking">
-                 <bool>false</bool>
-                </property>
-                <property name="orientation">
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <property name="tickPosition">
-                 <enum>QSlider::TicksBelow</enum>
-                </property>
-                <property name="tickInterval">
-                 <number>10</number>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QSpinBox" name="maxCloudCoverSpinBox">
-                <property name="suffix">
-                 <string>%</string>
-                </property>
-                <property name="minimum">
-                 <number>1</number>
-                </property>
-                <property name="maximum">
-                 <number>100</number>
-                </property>
-                <property name="value">
-                 <number>30</number>
+                 <string>Use canvas extent</string>
                 </property>
                </widget>
               </item>
@@ -843,14 +754,7 @@
             </item>
            </layout>
           </item>
-          <item row="1" column="0">
-           <widget class="QPushButton" name="getMetadata">
-            <property name="text">
-             <string>Search imagery</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
+          <item row="4" column="0">
            <widget class="QTableWidget" name="metadataTable">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
@@ -882,6 +786,111 @@
             <attribute name="horizontalHeaderStretchLastSection">
              <bool>true</bool>
             </attribute>
+           </widget>
+          </item>
+          <item row="2" column="0">
+           <widget class="QgsCollapsibleGroupBox" name="metadataFilters">
+            <property name="title">
+             <string>Additional filters</string>
+            </property>
+            <property name="checked">
+             <bool>false</bool>
+            </property>
+            <property name="collapsed">
+             <bool>true</bool>
+            </property>
+            <layout class="QGridLayout" name="layoutMetadataFilters" columnstretch="0,1,0">
+             <item row="0" column="0">
+              <widget class="QLabel" name="labelMinIntersection">
+               <property name="text">
+                <string>Min intersection:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QSlider" name="minIntersection">
+               <property name="maximum">
+                <number>100</number>
+               </property>
+               <property name="tracking">
+                <bool>false</bool>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="tickPosition">
+                <enum>QSlider::TicksBelow</enum>
+               </property>
+               <property name="tickInterval">
+                <number>5</number>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="2">
+              <widget class="QSpinBox" name="minIntersectionSpinBox">
+               <property name="suffix">
+                <string>%</string>
+               </property>
+               <property name="minimum">
+                <number>0</number>
+               </property>
+               <property name="maximum">
+                <number>100</number>
+               </property>
+               <property name="value">
+                <number>0</number>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="labelMaxCloudCover">
+               <property name="text">
+                <string>Cloud cover up to:</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QSlider" name="maxCloudCover">
+               <property name="minimum">
+                <number>1</number>
+               </property>
+               <property name="maximum">
+                <number>100</number>
+               </property>
+               <property name="value">
+                <number>100</number>
+               </property>
+               <property name="tracking">
+                <bool>false</bool>
+               </property>
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="tickPosition">
+                <enum>QSlider::TicksBelow</enum>
+               </property>
+               <property name="tickInterval">
+                <number>10</number>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="2">
+              <widget class="QSpinBox" name="maxCloudCoverSpinBox">
+               <property name="suffix">
+                <string>%</string>
+               </property>
+               <property name="minimum">
+                <number>1</number>
+               </property>
+               <property name="maximum">
+                <number>100</number>
+               </property>
+               <property name="value">
+                <number>100</number>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
